# sleepy-faces-discord

./: .gitignore  CMakeLists.txt  README.md  bot.config.example
includes/: Client.h  Commands.h  FileWatcher.h  Logger.h  Utils.h
src/: Client.cpp  Commands.cpp  FileWatcher.cpp  Logger.cpp  Utils.cpp  main.cpp
src/headers/: Client.h  Commands.h  FileWatcher.h  Logger.h  Utils.h
src/logic/: Client.cpp  Commands.cpp  FileWatcher.cpp  Logger.cpp  Utils.cpp
